# mercadona-ticket

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  sample.py
mercadona/: product.py  ticket.py
mercadona/ticket_parser/: parser.py
tests/ticket_parser/: test_parser.py
