[tool.poetry]
name = "mercadona"
version = "0.1.0"
description = ""
authors = ["antoniogamizdelgado <antoniogamiz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pypdf = "^4.0.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
